[project]
name = "graphent"
version = "0.1.0"
description = "A multi-agent framework for building conversational AI systems"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "langchain>=1.0.3",
    "langchain-openai>=1.1.0",
    "pytest>=9.0.1",
    "requests>=2.28.0",
]

[project.scripts]
graphent = "cli:main"
